# wechat-puppeteer

./: README.md  pyproject.toml  test.py  test_1.py  test_2.py  test_3.py  test_4.py
src/wechat-puppeteer/: config.py  exceptions.py
src/wechat-puppeteer/attrs/3x/: CHATROOM_BOX.json  CHAT_BOX.json  CHAT_SESSION_BOX.json  CONTACT_SESSION_BOX.json  FAVORITE_SESSION_BOX.json  MAIN.json  NAVIGATION_BOX.json  UPGRADE_BOX.json
src/wechat-puppeteer/locales/zh_CN/: CHATROOM.json  CHAT_BOX.json  CONTACT.json  FAVORITE_SESSION_BOX.json  MAIN.json  NAVIGATION_BOX.json  SESSION.json  UPGRADE.json
src/wechat-puppeteer/misc/: file.py
src/wechat-puppeteer/ui/: base.py  item.py  pane.py  toolbar.py  window.py
src/wechat-puppeteer/window/: base.py  navigationbox.py  sessionbox.py
